frontend/src/assets/css/common.css
/* ... */
.userAlertTextBox .normal {
  display: flex; 
  border-top: 1px solid #DFDFDF;
  width: 500px;
  height: 40px; 
  align-items: center;
}
.userAlertTextBox .key {
  width: 40%;
  height: 100%;
  display:flex;
  align-items: center;
  justify-content: center;
  background-color: #FBFBFB;
}
.userAlertTextBox .value {
  width: 60%; 
  height: 100%;
  display:flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid #DFDFDF;
}

